--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+html {
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: black;
+}
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .builder-icon {
+    @apply hover:bg-red-500 rounded-full cursor-pointer w-36 h-36 m-6;
+  }
+
+  .choice {
+    @apply font-bold text-white border text-center;
+  }
+
+  .choice-icons {
+    @apply flex flex-col justify-center items-center;
+  }
+
+  .menu-textbox {
+    @apply w-80 h-auto;
+  }
+
+  .menu-image {
+    @apply w-80 h-auto border-2 rounded-lg;
+  }
+
+  .menu-item {
+    @apply flex flex-col md:flex-row justify-center items-center text-center gap-6;
+  }
 }
